# Wavecraft

./: .gitignore  README.md  __init__.py  beat_detector.py  decomposer.py  feature_extractor.py  install_deps.sh  onset_detector.py  pyproject.toml  requirements.txt  segmenter.py  segmentor.py  utils.py  wac.py  wave_craft.py
wavecraft/: __init__.py  beat_detector.py  debug.py  decomposer.py  feature_extractor.py  metadata.py  onset_detector.py  operator.py  processor.py  proxi_metor.py  segmentor.py  utils.py  wac.py
