[tool.poetry]
name = "wavecraft"
version = "0.1.0"
description = ""
authors = ["TefDara <d@tefdara.art>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
librosa = "^0.10.1"
numpy = "1.24.3"
pandas = "2.1.0"
scikit-learn = "^1.3.2"
scipy = "^1.11.2"
pyloudnorm = "^0.1.1"
soundfile = "^0.12.1"
sounddevice = "^0.4.6"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
